--- a/styles.css
+++ b/styles.css
@@ -8,12 +8,15 @@ h1 {
     text-align: center;
 }
 
+.set-release-title {
+    text-align: center;
+}
+
 .release-countdown {
-    min-height: 100vh;
     display: flex;
     flex-direction: row;
-    justify-content: flex-start;
-    justify-content: space-between;
+    justify-content: center;
+    justify-content: space-around;
     text-align: center;
 }
 
@@ -21,5 +24,5 @@ h1 {
 .countdown-hours,
 .countdown-minutes,
 .countdown-seconds {
-    font-size: 2rem;
+    font-size: 1rem;
 }
