--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-    background-color: beige;
+    background-color: aquamarine;
 }
 
 h1 {
@@ -11,6 +11,7 @@ h1 {
 
 .set-release-title {
     text-align: center;
+    
 }
 
 .release-countdown {
@@ -26,4 +27,31 @@ h1 {
 .countdown-minutes,
 .countdown-seconds {
     font-size: 1rem;
+}
+
+.search-bar {
+    text-align: center ;
+    margin-bottom: 40px;
+}
+
+#card-display {
+    text-align: center;
+}
+
+.deck-counter {
+    margin-top: 20px;
+}
+
+.card-count {
+    font-weight: bold;
+    font-style: italic;
+}
+
+/* Media queries */
+@media only screen and (min-width: 480px) {
+
+}
+
+@media only screen and (min-width: 720px) {
+
 }
